--- a/html/dev/scss/theme/_frontend.scss
+++ b/html/dev/scss/theme/_frontend.scss
@@ -538,6 +538,20 @@ dd.briefing-tabs {
 	margin-top: 20px;
 }
 
+input.revision-count, input.revision-count:focus  {
+	text-align: center;
+	margin: auto;
+	width: 70px;
+	font-size: 3em;
+	line-height: 1em;
+	padding: 0px;
+	padding-top: 20px;
+	height: 100%;
+	border: none;
+
+}
+
+
 
 /* -----------------------------------------
    Profile Styles
