--- a/html/dev/css/app.css
+++ b/html/dev/css/app.css
@@ -933,22 +933,34 @@ dd.briefing-tabs {
   margin-bottom: -20px;
   margin-top: 20px; }
 
+/* line 541, ../scss/theme/_frontend.scss */
+input.revision-count, input.revision-count:focus {
+  text-align: center;
+  margin: auto;
+  width: 70px;
+  font-size: 3em;
+  line-height: 1em;
+  padding: 0px;
+  padding-top: 20px;
+  height: 100%;
+  border: none; }
+
 /* -----------------------------------------
    Profile Styles
 ----------------------------------------- */
-/* line 547, ../scss/theme/_frontend.scss */
+/* line 561, ../scss/theme/_frontend.scss */
 #container-profile .row {
   max-width: 900px; }
-/* line 551, ../scss/theme/_frontend.scss */
+/* line 565, ../scss/theme/_frontend.scss */
 #container-profile .button {
   margin-top: 120px; }
 
-/* line 556, ../scss/theme/_frontend.scss */
+/* line 570, ../scss/theme/_frontend.scss */
 #profile-head {
   border-top: 4px solid #32aebd;
   border-bottom: 4px solid #32aebd;
   padding: 0px 40px; }
-  /* line 561, ../scss/theme/_frontend.scss */
+  /* line 575, ../scss/theme/_frontend.scss */
   #profile-head h1 {
     padding-top: 20px;
     color: #f7f7f7;
@@ -956,106 +968,106 @@ dd.briefing-tabs {
     letter-spacing: 1px;
     font-weight: 200;
     font-size: 2em; }
-  /* line 570, ../scss/theme/_frontend.scss */
+  /* line 584, ../scss/theme/_frontend.scss */
   #profile-head #website {
     font-style: italic;
     padding-bottom: 20px; }
-  /* line 575, ../scss/theme/_frontend.scss */
+  /* line 589, ../scss/theme/_frontend.scss */
   #profile-head #description {
     text-align: justify;
     font-style: italic;
     padding: 0px 30px 0px 0px;
     font-weight: 300; }
-  /* line 582, ../scss/theme/_frontend.scss */
+  /* line 596, ../scss/theme/_frontend.scss */
   #profile-head a {
     color: #f7f7f7;
     font-weight: 300; }
-  /* line 587, ../scss/theme/_frontend.scss */
+  /* line 601, ../scss/theme/_frontend.scss */
   #profile-head a:hover {
     color: #32aebd; }
-  /* line 591, ../scss/theme/_frontend.scss */
+  /* line 605, ../scss/theme/_frontend.scss */
   #profile-head img {
     width: 150px;
     border: 2px solid #f7f7f7; }
     @media only screen and (max-width: 40em) {
-      /* line 591, ../scss/theme/_frontend.scss */
+      /* line 605, ../scss/theme/_frontend.scss */
       #profile-head img {
         display: block;
         margin: 0px auto;
         margin-bottom: 20px; } }
-  /* line 603, ../scss/theme/_frontend.scss */
+  /* line 617, ../scss/theme/_frontend.scss */
   #profile-head ul {
     margin: 0px; }
-    /* line 606, ../scss/theme/_frontend.scss */
+    /* line 620, ../scss/theme/_frontend.scss */
     #profile-head ul li {
       display: inline-block;
       padding: 15px 15px 15px 0px; }
 
-/* line 613, ../scss/theme/_frontend.scss */
+/* line 627, ../scss/theme/_frontend.scss */
 #profile-body {
   background-color: #f7f7f7;
   padding: 30px 10px 30px 30px; }
-  /* line 617, ../scss/theme/_frontend.scss */
+  /* line 631, ../scss/theme/_frontend.scss */
   #profile-body h2 {
     font-size: 1.3em;
     text-transform: uppercase;
     font-weight: 400;
     color: #ff6c60; }
-  /* line 624, ../scss/theme/_frontend.scss */
+  /* line 638, ../scss/theme/_frontend.scss */
   #profile-body ul {
     margin: 0px; }
-    /* line 627, ../scss/theme/_frontend.scss */
+    /* line 641, ../scss/theme/_frontend.scss */
     #profile-body ul li {
       padding: 7px 15px; }
-  /* line 632, ../scss/theme/_frontend.scss */
+  /* line 646, ../scss/theme/_frontend.scss */
   #profile-body #categories {
     position: absolute;
     left: 1px;
     color: #565656; }
-    /* line 637, ../scss/theme/_frontend.scss */
+    /* line 651, ../scss/theme/_frontend.scss */
     #profile-body #categories i {
       opacity: 0.7; }
-    /* line 641, ../scss/theme/_frontend.scss */
+    /* line 655, ../scss/theme/_frontend.scss */
     #profile-body #categories li#sum-points {
       padding: 43px 0px 15px 25px;
       font-weight: 600;
       font-size: 1.3em;
       line-height: 20px; }
-      /* line 647, ../scss/theme/_frontend.scss */
+      /* line 661, ../scss/theme/_frontend.scss */
       #profile-body #categories li#sum-points #vote-count {
         font-style: italic;
         color: #565656;
         font-size: 0.6em;
         font-weight: 400;
         padding-left: -5px; }
-  /* line 657, ../scss/theme/_frontend.scss */
+  /* line 671, ../scss/theme/_frontend.scss */
   #profile-body #points {
     float: left;
     position: relative;
     left: -86px; }
-    /* line 661, ../scss/theme/_frontend.scss */
+    /* line 675, ../scss/theme/_frontend.scss */
     #profile-body #points li {
       color: white;
       text-align: center;
       font-weight: 400;
       font-size: 1.3em;
       padding: 3px 16px; }
-    /* line 669, ../scss/theme/_frontend.scss */
+    /* line 683, ../scss/theme/_frontend.scss */
     #profile-body #points li.sum-points {
       padding: 30px 0px 35px 0px;
       font-size: 1.7em; }
 
-/* line 679, ../scss/theme/_frontend.scss */
+/* line 693, ../scss/theme/_frontend.scss */
 #qualification h2 {
   padding-bottom: 8px; }
-/* line 682, ../scss/theme/_frontend.scss */
+/* line 696, ../scss/theme/_frontend.scss */
 #qualification ul {
   margin: 0px; }
-  /* line 685, ../scss/theme/_frontend.scss */
+  /* line 699, ../scss/theme/_frontend.scss */
   #qualification ul li {
     padding: 0px 0px 30px 0px; }
 
-/* line 692, ../scss/theme/_frontend.scss */
+/* line 706, ../scss/theme/_frontend.scss */
 #skills li {
   margin-right: 5px;
   margin-bottom: 5px;
@@ -1064,36 +1076,36 @@ dd.briefing-tabs {
   color: white;
   text-transform: uppercase;
   font-size: 0.7em; }
-/* line 702, ../scss/theme/_frontend.scss */
+/* line 716, ../scss/theme/_frontend.scss */
 #skills .inline-list {
   margin-top: 20px; }
 
-/* line 707, ../scss/theme/_frontend.scss */
+/* line 721, ../scss/theme/_frontend.scss */
 .reference-item {
   color: white;
   height: 300px;
   padding: 0px;
   margin: 0px; }
 
-/* line 714, ../scss/theme/_frontend.scss */
+/* line 728, ../scss/theme/_frontend.scss */
 #profile-references {
   border-top: 4px solid #32aebd;
   border-bottom: 4px solid #32aebd;
   background-color: #f7f7f7; }
-  /* line 719, ../scss/theme/_frontend.scss */
+  /* line 733, ../scss/theme/_frontend.scss */
   #profile-references .row {
     padding-left: 15px;
     max-width: 915px; }
-  /* line 724, ../scss/theme/_frontend.scss */
+  /* line 738, ../scss/theme/_frontend.scss */
   #profile-references #references-head {
     border-top: 4px solid #32aebd; }
-    /* line 728, ../scss/theme/_frontend.scss */
+    /* line 742, ../scss/theme/_frontend.scss */
     #profile-references #references-head h2 {
       color: white;
       font-size: 2em;
       margin: 0px;
       padding: 5px; }
-  /* line 737, ../scss/theme/_frontend.scss */
+  /* line 751, ../scss/theme/_frontend.scss */
   #profile-references .overlay {
     position: absolute;
     top: 0;
@@ -1106,68 +1118,68 @@ dd.briefing-tabs {
     z-index: 100;
     -webkit-transition: opacity .9s ease;
     -moz-transition: opacity .9s ease; }
-  /* line 751, ../scss/theme/_frontend.scss */
+  /* line 765, ../scss/theme/_frontend.scss */
   #profile-references .reference-item:hover .overlay {
     opacity: 0.99; }
-  /* line 755, ../scss/theme/_frontend.scss */
+  /* line 769, ../scss/theme/_frontend.scss */
   #profile-references .plus {
     position: relative;
     top: 40px;
     color: white;
     opacity: 1; }
-    /* line 762, ../scss/theme/_frontend.scss */
+    /* line 776, ../scss/theme/_frontend.scss */
     #profile-references .plus h3 {
       color: white;
       font-size: 1em;
       padding-bottom: 2px;
       line-height: 5px; }
-    /* line 769, ../scss/theme/_frontend.scss */
+    /* line 783, ../scss/theme/_frontend.scss */
     #profile-references .plus span.link, #profile-references .plus span.time {
       font-style: italic;
       font-size: 0.5em;
       color: white;
       padding: 23px 0px 20px 0px; }
-    /* line 777, ../scss/theme/_frontend.scss */
+    /* line 791, ../scss/theme/_frontend.scss */
     #profile-references .plus .description {
       padding: 20px;
       padding-top: 5px;
       font-size: 0.5em; }
-    /* line 783, ../scss/theme/_frontend.scss */
+    /* line 797, ../scss/theme/_frontend.scss */
     #profile-references .plus .tasks {
       position: absolute; }
-      /* line 786, ../scss/theme/_frontend.scss */
+      /* line 800, ../scss/theme/_frontend.scss */
       #profile-references .plus .tasks li {
         margin-right: 2px;
         margin-bottom: 5px;
         color: white;
         text-transform: uppercase;
         font-size: 0.8em; }
-      /* line 794, ../scss/theme/_frontend.scss */
+      /* line 808, ../scss/theme/_frontend.scss */
       #profile-references .plus .tasks li:after {
         content: ", "; }
-      /* line 798, ../scss/theme/_frontend.scss */
+      /* line 812, ../scss/theme/_frontend.scss */
       #profile-references .plus .tasks .inline-list {
         margin: 0px;
         padding: 20px;
         text-align: center; }
 
-/* line 807, ../scss/theme/_frontend.scss */
+/* line 821, ../scss/theme/_frontend.scss */
 #profile-statistics {
   padding: 5px 0px 5px 15px; }
-  /* line 810, ../scss/theme/_frontend.scss */
+  /* line 824, ../scss/theme/_frontend.scss */
   #profile-statistics h3 {
     color: #f7f7f7;
     font-size: 1.2em;
     line-height: 1em;
     font-weight: 400; }
-  /* line 817, ../scss/theme/_frontend.scss */
+  /* line 831, ../scss/theme/_frontend.scss */
   #profile-statistics h5 {
     color: #f7f7f7;
     font-size: 0.8em;
     font-weight: 300;
     line-height: 1em; }
 
-/* line 825, ../scss/theme/_frontend.scss */
+/* line 839, ../scss/theme/_frontend.scss */
 #profile-comments {
   margin: 0px auto;
   max-width: 600px;
@@ -1175,87 +1187,87 @@ dd.briefing-tabs {
   background-color: #f7f7f7;
   padding: 30px 0px;
   margin-bottom: 60px; }
-  /* line 827, ../scss/theme/_frontend.scss */
+  /* line 841, ../scss/theme/_frontend.scss */
   #profile-comments .row {
     padding-top: 30px;
     margin: 0px;
     position: relative; }
-  /* line 840, ../scss/theme/_frontend.scss */
+  /* line 854, ../scss/theme/_frontend.scss */
   #profile-comments .author {
     margin-top: 15px; }
-    /* line 843, ../scss/theme/_frontend.scss */
+    /* line 857, ../scss/theme/_frontend.scss */
     #profile-comments .author .name {
       font-size: 1.0em;
       font-weight: 400; }
-    /* line 849, ../scss/theme/_frontend.scss */
+    /* line 863, ../scss/theme/_frontend.scss */
     #profile-comments .author .time {
       font-size: 0.7em; }
-  /* line 855, ../scss/theme/_frontend.scss */
+  /* line 869, ../scss/theme/_frontend.scss */
   #profile-comments .row:nth-child(even) .author {
     float: left;
     border-left: 5px solid #afafaf; }
-  /* line 862, ../scss/theme/_frontend.scss */
+  /* line 876, ../scss/theme/_frontend.scss */
   #profile-comments .row:nth-child(odd) .author {
     float: right;
     border-right: 5px solid #afafaf; }
-  /* line 868, ../scss/theme/_frontend.scss */
+  /* line 882, ../scss/theme/_frontend.scss */
   #profile-comments .comment {
     font-style: italic;
     padding: 15px 20px 0px 30px;
     color: #565656; }
-  /* line 874, ../scss/theme/_frontend.scss */
+  /* line 888, ../scss/theme/_frontend.scss */
   #profile-comments .comment:before, #profile-comments .comment:after {
     content: '"'; }
-  /* line 878, ../scss/theme/_frontend.scss */
+  /* line 892, ../scss/theme/_frontend.scss */
   #profile-comments #more-comments {
     font-size: 2em;
     color: #afafaf; }
-  /* line 883, ../scss/theme/_frontend.scss */
+  /* line 897, ../scss/theme/_frontend.scss */
   #profile-comments #more-comments:hover {
     color: #32aebd; }
 
 /* -----------------------------------------
    Profile List Styles
 ----------------------------------------- */
-/* line 892, ../scss/theme/_frontend.scss */
+/* line 906, ../scss/theme/_frontend.scss */
 .profile {
   margin-right: 10px;
   overflow: hidden; }
 
-/* line 897, ../scss/theme/_frontend.scss */
+/* line 911, ../scss/theme/_frontend.scss */
 .profile-head {
   overflow: hidden; }
-  /* line 899, ../scss/theme/_frontend.scss */
+  /* line 913, ../scss/theme/_frontend.scss */
   .profile-head .overlay-name {
     background: rgba(0, 0, 0, 0.5);
     margin: 0px;
     padding: 4px 0px; }
-  /* line 905, ../scss/theme/_frontend.scss */
+  /* line 919, ../scss/theme/_frontend.scss */
   .profile-head h2 {
     color: white;
     opacity: 0.99;
     font-size: 1.1em;
     font-family: "Shadows Into Light Two";
     letter-spacing: 3px; }
-  /* line 913, ../scss/theme/_frontend.scss */
+  /* line 927, ../scss/theme/_frontend.scss */
   .profile-head img {
     position: relative;
     top: 38px;
     border-top: 4px solid #32aebd;
     width: 293px; }
 
-/* line 921, ../scss/theme/_frontend.scss */
+/* line 935, ../scss/theme/_frontend.scss */
 .profile-body {
   background-color: #f7f7f7;
   padding: 15px; }
 
-/* line 926, ../scss/theme/_frontend.scss */
+/* line 940, ../scss/theme/_frontend.scss */
 .profile-rating {
   background-color: #f7f7f7; }
-  /* line 930, ../scss/theme/_frontend.scss */
+  /* line 944, ../scss/theme/_frontend.scss */
   .profile-rating ul {
     margin: 0px; }
-    /* line 932, ../scss/theme/_frontend.scss */
+    /* line 946, ../scss/theme/_frontend.scss */
     .profile-rating ul li {
       margin: 0px;
       padding: 7px 0px 7px 20px;
@@ -1263,19 +1275,19 @@ dd.briefing-tabs {
       text-align: center;
       font-size: 0.8em; }
 
-/* line 942, ../scss/theme/_frontend.scss */
+/* line 956, ../scss/theme/_frontend.scss */
 .inline-list > li {
   margin-left: 0px; }
 
-/* line 947, ../scss/theme/_frontend.scss */
+/* line 961, ../scss/theme/_frontend.scss */
 ul.legende {
   width: 180px; }
-  /* line 949, ../scss/theme/_frontend.scss */
+  /* line 963, ../scss/theme/_frontend.scss */
   ul.legende li {
     padding: 0px 7px 5px 7px;
     margin-left: 5px; }
 
-/* line 956, ../scss/theme/_frontend.scss */
+/* line 970, ../scss/theme/_frontend.scss */
 .overlay {
   position: absolute;
   top: 43px;
@@ -1289,53 +1301,53 @@ ul.legende {
   -webkit-transition: opacity .9s ease;
   -moz-transition: opacity .9s ease; }
 
-/* line 970, ../scss/theme/_frontend.scss */
+/* line 984, ../scss/theme/_frontend.scss */
 .profile-head:hover .overlay {
   opacity: 0.9; }
 
-/* line 974, ../scss/theme/_frontend.scss */
+/* line 988, ../scss/theme/_frontend.scss */
 .plus {
   position: relative;
   top: 48%;
   color: white;
   opacity: 0.99;
   font-size: 2em; }
-  /* line 981, ../scss/theme/_frontend.scss */
+  /* line 995, ../scss/theme/_frontend.scss */
   .plus a {
     color: white;
     opacity: 0.99; }
-  /* line 986, ../scss/theme/_frontend.scss */
+  /* line 1000, ../scss/theme/_frontend.scss */
   .plus a:hover {
     color: #32aebd; }
 
-/* line 992, ../scss/theme/_frontend.scss */
+/* line 1006, ../scss/theme/_frontend.scss */
 footer.frontend-footer {
   text-align: center; }
-  /* line 995, ../scss/theme/_frontend.scss */
+  /* line 1009, ../scss/theme/_frontend.scss */
   footer.frontend-footer img {
     width: 70px; }
-  /* line 999, ../scss/theme/_frontend.scss */
+  /* line 1013, ../scss/theme/_frontend.scss */
   footer.frontend-footer #social {
     font-size: 1.6em;
     margin-top: 35px;
     text-transform: lowercase; }
-  /* line 1005, ../scss/theme/_frontend.scss */
+  /* line 1019, ../scss/theme/_frontend.scss */
   footer.frontend-footer #link {
     margin-top: 35px;
     text-transform: lowercase;
     padding-bottom: 20px; }
-  /* line 1011, ../scss/theme/_frontend.scss */
+  /* line 1025, ../scss/theme/_frontend.scss */
   footer.frontend-footer a {
     margin-left: 20px;
     color: white; }
-  /* line 1016, ../scss/theme/_frontend.scss */
+  /* line 1030, ../scss/theme/_frontend.scss */
   footer.frontend-footer a:hover {
     color: #32aebd; }
-  /* line 1020, ../scss/theme/_frontend.scss */
+  /* line 1034, ../scss/theme/_frontend.scss */
   footer.frontend-footer span {
     color: #f7f7f7;
     padding-top: 20px; }
-  /* line 1025, ../scss/theme/_frontend.scss */
+  /* line 1039, ../scss/theme/_frontend.scss */
   footer.frontend-footer #copyright {
     font-size: 0.8em;
     margin-top: 15px;
@@ -1344,16 +1356,16 @@ footer.frontend-footer {
 /* -----------------------------------------
    Team Styles
 ----------------------------------------- */
-/* line 1038, ../scss/theme/_frontend.scss */
+/* line 1052, ../scss/theme/_frontend.scss */
 .team-thumb img {
   border-radius: 100px; }
-/* line 1042, ../scss/theme/_frontend.scss */
+/* line 1056, ../scss/theme/_frontend.scss */
 .team-thumb img:hover {
   opacity: 0.5; }
-/* line 1046, ../scss/theme/_frontend.scss */
+/* line 1060, ../scss/theme/_frontend.scss */
 .team-thumb h3 {
   padding-top: 20px; }
-/* line 1050, ../scss/theme/_frontend.scss */
+/* line 1064, ../scss/theme/_frontend.scss */
 .team-thumb p {
   font-style: italic; }
 
