--- a/html/dev/scss/theme/_backend.scss
+++ b/html/dev/scss/theme/_backend.scss
@@ -309,6 +309,19 @@ header.show-for-large-up {
 }
 
 /* -----------------------------------------
+   Backend Styles - Projekte - Rating
+----------------------------------------- */
+
+.rating-sum-container {
+	font-size: 1.2em;
+	text-align: right;
+
+	span {
+		font-size: 1.6em;
+	}
+}
+
+/* -----------------------------------------
    Backend Styles - Application
 ----------------------------------------- */
 
