--- a/html/dev/_worker/views/briefingsdetailView.html
+++ b/html/dev/_worker/views/briefingsdetailView.html
@@ -104,196 +104,37 @@
   <h2>Anforderungen</h2>
 </div>
 <div class="main-section">
-  <div class="row briefing-summary">
-
-
-
+  <div ng-repeat="el in data" class="row briefing-summary">
     <br class="end">
-    <div class="large-3 columns">
-      <h2> Inhalt</h2>
-      <span class="section-sum-money section-sum-1">0</span><span class="section-sum-time section-time-1">0</span>
+
+      <div class="large-3 columns">
+      <h2>{{el.name}}</h2>
+      <span ng-bind="el.cost" class="section-sum-money"></span><span ng-bind="el.time" class="section-sum-time"></span>
     </div>
-    <div class="briefing-section-1 large-9 columns table-border-left">
-      <table>
-        <tr>
-          <td width="30%">Unterseiten</td>
-          <td  width="49%">
-            <ul>
-              <li><i class="green-font fa fa-plus  fa-fw"></i> Startseite</li>
-              <li><i class="green-font fa fa-plus  fa-fw"></i> Impressum</li>
-              <?php
-                  // duplicating array in new Variable, because otherwiese it works only once - don't know why ;)
-              $subpages = $briefing;
-
-                  // Run through array and output all function fields (containing "c_function_")
-              while (list( $field, $value ) = each( $subpages )) {
-                if(preg_match('/c_pages_/',$field)) {
-                  echo '<li><i class="green-font fa fa-plus  fa-fw"></i> '.$value.'</li>';
-                }
-              }
-              ?>
-            </ul>
+    <div class="briefing-section large-9 columns table-border-left">
+      <table calculator-value>
+        
+        <tr ng-repeat="(key, value) in el.data">
+          <td width="30%" style="text-transform: capitalize;">{{key}}</td>
+          <td width="49%">{{value}}</td>
+          <td width="21%">
+            <input type="text" ng-init="el.subTime[$index] = 0" ng-model="el.subTime[$index]" ng-change="process()"  class="left effort" >
+            <input ng-init="el.subCost[$index] = 50" ng-model="el.subCost[$index]" ng-change="process()" type="text" class="right rate" >
           </td>
-          <td width="21%"><input type="text" class="left effort-1-1" value="0"><input type="text" class="right rate-1-1" value="50"></td>
         </tr>
-        <tr>
-         <td>Texterstellung</td>
-         <td><?php echo $r_text; ?></td>
-         <td><input type="text" class="left effort-1-2" value="0"><input type="text" class="right rate-1-2" value="50"></td>
 
-       </tr>
-       <tr>
-        <td>Grafikerstellung</td>
-        <td><?php echo $r_grafik; ?></td>
-        <td><input type="text" class="left effort-1-3" value="0"><input type="text" class="right rate-1-3" value="50"></td>
-      </tr>
-    </table>
+      </table>
+    </div>
   </div>
-
-  <div class="large-3 columns">
-    <h2>Funktionen</h2>
-    <span class="section-sum-money section-sum-2">0</span><span class="section-sum-time section-time-2">0</span>
-  </div>
-  <div class="briefing-section-2 large-9 columns table-border-left">
-
-    <table>
-      <tr>
-       <td width="30%">Selbst Inhalte warten</td>
-       <td width="49%"><?php echo $r_cms; ?></td>
-       <td width="21%"><input type="text" class="left effort-2-1" value="0"><input type="text" class="right rate-2-1" value="50"></td>
-     </tr>
-     <tr>
-       <td >Mobile Version</td>
-       <td><?php echo $r_cms; ?></td>
-       <td><input type="text" class="left effort-2-2" value="0"><input type="text" class="right rate-2-2" value="50"></td>
-     </tr>
-     <tr>
-      <td>Barrierefreiheit</td>
-      <td><?php echo $r_accessibility; ?></td>
-      <td><input type="text" class="left effort-2-3" value="0"><input type="text" class="right rate-2-3" value="50"></td>
-    </tr>
-    <tr>
-      <td>Funktionen</td>
-      <td>
-        <ul>
-          <?php
-            // duplicating array in new Variable, because otherwiese it works only once - don't know why ;)
-          $functions = $briefing;
-
-                  // Run through array and output all function fields (containing "c_function_")
-          while (list( $field, $value ) = each( $functions )) {
-            if(preg_match('/c_function_/',$field)) {
-              echo '<li><i class="green-font fa fa-plus  fa-fw"></i> '.$value.'</li>';
-            }
-          }
-          ?>
-        </ul>
-      </td>
-      <td><input type="text" class="left effort-2-4" value="0"><input type="text" class="right rate-2-4" value="50"></td>
-    </tr>
-    <tr>
-      <td>Externe Plattformen</td>
-      <td>
-        <ul>
-          <?php
-
-          $plattforms = $briefing;
-                  // Run through array and output all function fields (containing "c_function_")
-          while (list( $field, $value ) = each( $plattforms )) {
-            if(preg_match('/c_ext_/',$field)) {
-              echo '<li><i class="green-font fa fa-plus  fa-fw"></i> '.$value.'</li>';
-            }
-          }
-          ?>
-        </ul>
-      </td>
-      <td width="21%"><input type="text" class="left effort-2-5" value="0"><input type="text" class="right rate-2-5" value="50"></td>
-    </tr>
-  </table>
-
-</div>
-<div class="large-3 columns section-meta">
-  <h2>Design</h2>
-  <span class="section-sum-money section-sum-3">0</span>
-  <span class="section-sum-time section-time-3">0</span>
-</div>
-<div class="briefing-section-3 large-9 columns table-border-left">
-
-  <table>
-    <tr>
-      <td width="30%">Realisierung</td>
-      <td width="49%"><?php echo $r_design; ?></td>
-      <td width="21%"><input type="text" class="left effort-3-1" value="0"><input type="text" class="right rate-3-1" value="50"></td>
-    </tr>
-    <tr>
-      <td>Revisionsdurchläufe</td>
-      <td><?php echo $s_revisions; ?></td>
-      <td><input type="text" class="left effort-3-2" value="0"><input type="text" class="right rate-3-2" value="50"></td>
-    </tr>
-
-  </table>
-</div>
-</div>
-
-<div class="row briefing-summary">
-  <div class="large-3 columns">
-    <h2>Service</h2>
-    <span class="section-sum-money section-sum-4">0</span>
-    <span class="section-sum-time section-time-4">0</span>
-  </div>
-  <div class="briefing-section-4 large-9 columns table-border-left">
-
-    <table>
-      <tr>
-        <td width="30%">Server</td>
-        <td width="49%"><?php echo $r_service_server; ?></td>
-        <td width="21%"><input type="text" class="left effort-4-1" value="0"><input type="text" class="right rate-4-1" value="50"></td>
-      </tr>
-      <tr>
-        <td>Domain</td>
-        <td><?php echo $r_service_domain; ?></td>
-        <td><input type="text" class="left effort-4-2" value="0"><input type="text" class="right rate-4-2" value="50"></td>
-      </tr>
-      <tr>
-        <td>E-mail Adressen</td>
-        <td><?php echo $r_service_mail; ?></td>
-        <td><input type="text" class="left effort-4-3" value="0"><input type="text" class="right rate-4-3" value="50"></td>
-      </tr>
-      <tr>
-        <td>Statistiken</td>
-        <td><?php echo $r_service_statistics; ?></td>
-        <td><input type="text" class="left effort-4-4" value="0"><input type="text" class="right rate-4-4" value="50"></td>
-      </tr>
-      <tr>
-        <td>Mitarbeiterschulung</td>
-        <td><?php echo $r_service_instructions; ?></td>
-        <td><input type="text" class="left effort-4-5" value="0"><input type="text" class="right rate-4-5" value="50"></td>
-      </tr>
-      <tr>
-        <td>Online Marketing</td>
-        <td><?php echo $r_service_advertising; ?></td>
-        <td><input type="text" class="left effort-4-6" value="0"><input type="text" class="right rate-4-6" value="50"></td>
-      </tr>
-    </table>
-  </div>
-  <div class="large-3 columns">
-    <h2>Kommentar</h2>
-  </div>
-  <div class="large-9 columns table-border-left">
-    <table>
-      <?php echo $t_comment; ?>
-    </table>
-  </div>
-</div>
 </div>
 
 <div class="sticky-application-form">
   <div class="large-3 columns">
     <div class="applicationsettings text-center">
       <div id="settings-time">
-        <div class="small-4 columns">€ Basissatz<input type="text"  value="50" class="defaultRate" placeholder="Stundensatz"></div>
-        <div class="small-4 columns">% Rabatt<input type="text"  name="discount" value="0" placeholder=""></div>
-        <div class="small-4 columns">% Steuer<input type="text" name="mwst" value="20" placeholder=""></div>
+        <div class="small-4 columns">€ Basissatz<input type="text"  ng-model="rate"  class="defaultRate" placeholder="Stundensatz"></div>
+        <div class="small-4 columns">% Rabatt<input type="text"  name="discount" ng-model = "discount" placeholder=""></div>
+        <div class="small-4 columns">% Steuer<input type="text" name="mwst" ng-model = "tax"  placeholder=""></div>
       </div>
       <div id="settings-pauschal" class="hide">
         <div class="small-6 columns">€ Kosten<input type="text" name="pauschal-price" value="0" placeholder="Stundensatz"></div>
@@ -301,22 +142,27 @@
       </div>
 
       <div class="method-change-buttons">
-        <a href="#" id="link-time" class="active"><i class="fa fa-clock-o"></i></a>
-        <a href="#" id="link-pauschal"><i class="fa fa-legal"></i></a>
+        <a href id="link-time" class="active"><i class="fa fa-clock-o"></i></a>
+        <a href id="link-pauschal"><i class="fa fa-legal"></i></a>
       </div>
     </div>
   </div>
   <div class="large-6 columns">
-    <textarea type="text" id="t_application" rows="5" name="t_application" >Ich möchte mich gerne für diesen Auftrag bewerben, weil...</textarea>
+    <textarea type="text" ng-model="comment" id="t_application" placeholder="Ich möchte mich gerne für diesen Auftrag bewerben, weil..." rows="5" name="t_application" ></textarea>
   </div>
   <div class="large-3 columns">
     <div class="label primary-bg counter application-final-result">
-      <span class="counter-value">0</span> (inkl. <span class="mwst-part">0</span> € MwSt.)
-      <div class="total-calculatet"><span class="total-effort">0</span> <span class="average-rate">0</span>
+      <span ng-bind="price" class="counter-value">0</span> (inkl. <span ng-bind="msw" class="mwst-part"></span> € MwSt.)
+      
+      <div class="total-calculatet">
+        <span  ng-bind="totalTime" class="total-effort"></span> 
+        <span ng-bind = "pricePerHour" class="average-rate"></span>
       </div>
+      
       <div class="total-pauschal hide">Pauschalpreis</div>
+
     </div>
-    <a href="#" class="button green-bg expand big" data-reveal-id="sendApplication"><i class="fa fa-check"></i> Absenden</a>
+    <a class="button green-bg expand big" data-reveal-id="sendApplication"><i class="fa fa-check"></i> Absenden</a>
   </div>
 </div>
 
