--- a/html/dev/_worker/views/briefingsdetailView.html
+++ b/html/dev/_worker/views/briefingsdetailView.html
@@ -37,7 +37,7 @@
     <table>
       <tr>
         <td>Unternehmen </td>
-        <td ng-bind="meta.general_briefing.general.firma"></td>
+        <td ng-bind="meta.general_briefing.general.company"></td>
       </tr>
       <tr>
         <td>Website</td>
@@ -83,11 +83,11 @@
 
       <tr>
         <td>Positive Referenzen</td>
-        <td ng-bind="meta.general_briefing.design.positiveReference"></td>
+        <td ng-bind="meta.general_briefing.design.positivereference"></td>
       </tr>
       <tr>
         <td>Negative Referenzen</td>
-        <td ng-bind="meta.general_briefing.design.negativeReference"></td>
+        <td ng-bind="meta.general_briefing.design.negativereference"></td>
       </tr>
     </table>
   </div>
