--- a/html/dev/_worker/views/profileView.html
+++ b/html/dev/_worker/views/profileView.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="medium-2 columns show-for-medium-up">
 			<div id="profile-navigation">
-				<dl class="tabs vertical" data-tab>
+				<dl foundation-tab class="tabs vertical" data-tab>
 					<dd class="active"><a href="#panel1"><i class="fa fa-user fa-fw"></i></a></dd>
 					<dd><a href="#panel2"><i class="fa fa-mortar-board fa-fw"></i></a></dd>
 					<dd><a href="#panel3"><i class="fa fa-windows fa-fw"></i></a></dd>
@@ -27,17 +27,21 @@
 						<div class="large-4 columns">
 							<div id="dropzone" class="fade well">
 								<div id="upload-pic">
-									<!-- <img src="http://lorempixel.com/250/200/people/" alt=""> -->
+									<img ng-src="{{picFolder}}{{pub.general.picture}}" alt="">
 								</div>
+
 								<a class="fileinput-button">
 									<i class="fa fa-upload fa-fw"></i><br />Profilbild wählen...
 									<!-- The file input field used as target for the file upload widget -->
-									<input id="fileupload" type="file" name="files[]">
+									<!-- <input style="z-index:999" id="fileupload" type="file" name="files"> -->
 								</a>
+
 							</div>
+							<input id="fileupload" onchange="angular.element(this).scope().addFile(this)" type="file" name="files">
 						</div>
 						<div class="medium-8 columns">
 							<div class="medium-5 columns">
+								
 								<label for="i_name">Name</label>
 								<input  type="text" id="i_name" placeholder="Max Mustermann">
 							</div>
@@ -53,11 +57,11 @@
 							<div class="medium-5 columns">
 								<label for="i_competence">Kompetenzen</label>
 								
-								<input ng-model="pub.competencies[0]" type="text" id="i_competence" placeholder="PHP, SQL, Photoshop...">
+								<input ng-model="pub.competencies" type="text" id="i_competence" placeholder="PHP, SQL, Photoshop...">
 							</div>
 							<div class="medium-7 columns">
 								<label for="i_skills">Stärken</label>
-								<input ng-model="pub.skills[0]"  type="text" id="i_skills" placeholder="Disziplin, Pünktlichkeit...">
+								<input ng-model="pub.skills" type="text" id="i_skills" placeholder="Disziplin, Pünktlichkeit...">
 							</div>
 
 							<div class="medium-6 columns">
@@ -97,9 +101,7 @@
 						<label for="t_xing" class="text-center"><i class="fa fa-xing fa-fw"></i></label>
 						<input ng-model="pub.social[3].link" type="text" id="t_xing" placeholder="http://xing.com/...">
 					</div>
-					<div class="text-right padding-top">
-						<a href="" class="button green-bg"><i class="fa fa-save fa-fw"></i> Speichern</a>
-					</div>
+					
 				</div>
 			</div>
 			<div class="content" id="panel2">
@@ -115,22 +117,22 @@
 						<th  width="100px"><i class="fa fa-mortar-board fa-fw"></i></th>
 						<th  width="80px"></th>
 					</tr>
-					<tr>
+					<tr ng-repeat = "el in pub.education">
+						<td ng-bind="el.endDate"></td>
+						<td ng-bind="el.location"></td>
+						<td ng-bind="el.institution"></td>
+						<td ng-bind="el.course"></td>
+						<td ng-bind="el.qualification"></td>
+						<td><a href=""><i class="fa fa-edit fa-fw"></i></a></td>
+					</tr>
+					<!-- <tr>
 						<td>2014</td>
 						<td>Wien</td>
 						<td>SAE Technology Institute</td>
 						<td>Webdesign & Development</td>
 						<td>Bachelor</td>
 						<td><a href=""><i class="fa fa-edit fa-fw"></i></a></td>
-					</tr>
-					<tr>
-						<td>2014</td>
-						<td>Wien</td>
-						<td>SAE Technology Institute</td>
-						<td>Webdesign & Development</td>
-						<td>Bachelor</td>
-						<td><a href=""><i class="fa fa-edit fa-fw"></i></a></td>
-					</tr>
+					</tr> -->
 				</table>
 
 				<div id="add-education" class="reveal-modal" data-reveal>
@@ -138,34 +140,37 @@
 
 					<div class="medium-4 columns">
 						<label for="i_institution">Einrichtung</label>
-						<input type="text" name="i_institution" id="i_institution" placeholder="SAE Institute">
+						<input ng-model="edTemp.institution" type="text" name="i_institution" id="i_institution" placeholder="SAE Institute">
 					</div>
 					<div class="medium-4 columns">
 						<label for="i_course">Kurs</label>
-						<input type="text" name="i_course" id="i_course" placeholder="Webdesign & Development">
+						<input ng-model="edTemp.course" type="text" name="i_course" id="i_course" placeholder="Webdesign & Development">
 					</div>
 
 					<div class="medium-4 columns">
 						<label for="i_title">Titel</label>
-						<input type="text" name="i_title" id="i_title" placeholder="Bachelor">
+						<input ng-model="edTemp.qualification" type="text" name="i_title" id="i_title" placeholder="Bachelor">
 					</div>
 
 					<div class="medium-4 columns">
 						<label for="i_state">Ort</label>
-						<input type="text" name="i_state" id="i_state" placeholder="Wien">
+						<input ng-model="edTemp.location" type="text" name="i_state" id="i_state" placeholder="Wien">
 					</div>
 					<div class="medium-4 columns">
 						<label for="i_start">Start</label>
-						<input type="text" name="i_start" id="i_start" placeholder="2013">
+						<input ng-model="edTemp.startDate" type="text" name="i_start" id="i_start" placeholder="2013">
 					</div>
 
 					<div class="medium-4 columns">
 						<label for="i_end">Ende</label>
-						<input type="text" nmae="i_end" id="i_end" placeholder="2016">
+						<input ng-model="edTemp.endDate" type="text" nmae="i_end" id="i_end" placeholder="2016">
 					</div>
 
+
 					<a class="close-reveal-modal">&#215;</a>
-					<a href="" class="button green-bg text-right"><i class="fa fa-save fa-fw"></i> Speichern</a>
+					<a href="" ng-click="addEducation($event)" class="button green-bg text-right">
+						<i class="fa fa-save fa-fw"></i> Add
+					</a>
 				</div>
 			</div>
 			<div class="content" id="panel3">
@@ -183,34 +188,39 @@
 					<div class="row">
 						<div class="medium-3 columns">
 							<label for="i_name">Projektname</label>
-							<input type="text" name="i_name" id="i_name" placeholder="Calculi">
+							<input ng-model="pub.refTmp.name" type="text" name="i_name" id="i_name" placeholder="Calculi">
 						</div>
 						<div class="medium-3 columns">
 							<label for="i_url">URL</label>
-							<input type="text" name="i_url" id="i_url" placeholder="http://calculi.at">
+							<input ng-model="pub.refTmp.url" type="text" name="i_url" id="i_url" placeholder="http://calculi.at">
 						</div>
 
 						<div class="medium-2 columns">
 							<label for="i_date">Datum</label>
-							<input type="text" name="i_date" id="i_date" placeholder="2014">
+							<input ng-model="pub.refTmp.date" type="text" name="i_date" id="i_date" placeholder="2014">
 						</div>
 						<div class="medium-4 columns">
+							<input id="fileuploadss" onchange="angular.element(this).scope().addThumbnail(this)" type="file" name="filesss">
 							<a class="fileinput-button button padding-top">
 								Thumbnail wählen
 								<!-- The file input field used as target for the file upload widget -->
-								<input id="fileupload" name="f_thumb" type="file" >
+								
 							</a>
 						</div>
 					</div>
 					<div class="row">
 						<div class="medium-12 columns">
 							<label for="i_description">Beschreibung</label>
-							<textarea type="text" name="i_description" id="i_description" rows="5" placeholder="Das Projekt wurde..."></textarea>
+							<textarea ng-model="pub.refTmp.description" type="text" name="i_description" id="i_description" rows="5" placeholder="Das Projekt wurde..."></textarea>
 						</div>
 					</div>
 					<a class="close-reveal-modal">&#215;</a>
-					<a href="" class="button green-bg text-right"><i class="fa fa-save fa-fw"></i> Speichern</a>
+					<a href ng-click="addReference($event)" class="button green-bg text-right"><i class="fa fa-save fa-fw"></i> Speichern</a>
 				</div>
+			</div>
+			<br class= "end" />
+			<div class="text-right padding-top">
+				<a ng-click="save()" class="button green-bg"><i class="fa fa-save fa-fw"></i> Speichern</a>
 			</div>
 		</div>
 	</div>
