--- a/html/dev/_worker/views/briefingsView.html
+++ b/html/dev/_worker/views/briefingsView.html
@@ -42,7 +42,7 @@
         <td>{{el.general_briefing.general.branche}}</td>
         <td>{{el.general_briefing.general.country}}</td>
         <td>{{el.effort}}</td>
-        <td>{{el.expire_at}}</td>  
+        <td dateformat> <span>{{el.expire_at}}</span> Tage</td>  
         <td>
           <span class="label grey-bg">{{el.status}}</span>
         </td>
