--- a/html/dev/_worker/views/applicantsView.html
+++ b/html/dev/_worker/views/applicantsView.html
@@ -12,17 +12,19 @@
         <th width="50px"><i class="fa fa-legal fa-fw"></i></th>
         <th width="100px"><i class="fa fa-euro fa-fw"></i></th>
         <th width="80px"><i class="fa fa-heart fa-fw"></i></th>
+        <th width="80px"><i class="fa fa-heart fa-fw"></i></th>
         
       </tr>
       
-      <tr ng-repeat="el in data" ng-click="send(el)" class="clickable">
-        <td>{{el.briefing_id}}</td>
+      <tr ng-repeat="el in data"  class="clickable">
+        <td><a target="_blank" ng-href="../_frontend/index.php?page=profile&userId={{el.worker_id}}">{{el.briefing_id}}</td>
         <td>{{el.full_name}}</td>
         <td>{{el.website}}</td>
         <td>{{el.country}}</td>
         <td>{{el.numberReferences}}</td>
         <td>{{el.estimated_price}}</td>
         <td>{{el.status}}</td>
+        <td ng-click ="send(el)"><span  class="label grey-bg"><a href="">Accept</a></span>
         <!-- <td>{{el.expire_at}}</td>   -->
         <!-- <td>
           <span class="label grey-bg">{{el.status}}</span>
