--- a/html/dev/_worker/views/profileView.html
+++ b/html/dev/_worker/views/profileView.html
@@ -1,7 +1,7 @@
 <div class="main-section">
 	<div class="row">
 		<div class="clearfix">
-			<a href="../_frontend/index.php?page=profile" class="right">Öffentliches Profil anzeigen</a>
+			<a href="../_frontend/index.php?page=profile&userId={{userId}}" class="right">Öffentliches Profil anzeigen</a>
 		</div>
 		<div class="row half-padding show-for-medium-up" id="profile-progress">
 			Profil zu 30% vollständig
@@ -26,7 +26,7 @@
 					<div class="row">
 						<div class="large-4 columns">
 							<div id="dropzone" class="fade well">
-								<div id="upload-pic">
+								<div style="overflow:hidden" id="upload-pic">
 									<img ng-src="{{picFolder}}{{pub.general.picture}}" alt="">
 								</div>
 
